crates/pgt_typecheck/tests/snapshots/invalid_column.snap
---
source: crates/pgt_typecheck/tests/diagnostics.rs
expression: content
---
select id, ~~~unknown~~~ from contacts;

column &quot;unknown&quot; does not exist
