crates/pgt_typecheck/tests/snapshots/invalid_type_in_function_longer_default.snap
---
source: crates/pgt_typecheck/tests/diagnostics.rs
expression: content
---
delete from public.contacts where id = ~~~uid~~~;

invalid input syntax for type integer: uuid
