crates/pgt_typecheck/tests/snapshots/invalid_type_in_function_shorter_default.snap
---
source: crates/pgt_typecheck/tests/diagnostics.rs
expression: content
---
delete from public.contacts where id = ~~~contact_name~~~;

invalid input syntax for type integer: &quot;&quot;
