crates/pgt_typecheck/tests/snapshots/testing_operator_type_with_multiple_words.snap
---
source: crates/pgt_typecheck/tests/diagnostics.rs
expression: content
---
delete from public.products where ~~~released > pid~~~;

operator does not exist: timestamp with time zone &gt; integer
